# alo

./: .gitignore  .travis.yml  CMakeLists.txt
aliroot/: CMakeLists.txt
aliroot/mathieson/: CMakeLists.txt  test_Mathieson.cxx
aliroot/r23/mch/: CMakeLists.txt
aliroot/r23/mch/geometry/: CMakeLists.txt  mch-export-geometry.cxx
jsonmap/creator/: CMakeLists.txt  segmentTree.cxx
jsonmap/creator/test/: CMakeLists.txt  testContour.cxx  testSegmentTree.cxx
o2/mch/dumper/: DumpClusters.cxx  DumpDigits.cxx
o2/mch/mapping/codegen/: README.md  berg.cxx  goImplementation.cxx  mch-mapping-generate-code.cxx  testBerg.cxx
o2/mch/mapping/data/run3/: bergs.json
r23/: CMakeLists.txt  README.md
r23/esdconvertor/: CMakeLists.txt  Cluster.fbs  Cluster_generated.h  ConvertESD.cxx  ConvertESDTrack.C  Digit.fbs  Digit_generated.h  DumpDigits.cxx  FileCreation.cxx  FileCreation.h  README.md  SegmentationPair.h  mch-convert-esd-to-digits.cxx  mch-convert-esd.cxx  mch-digits-dump.cxx  mch-dump-digits.cxx  mch-dump.cxx  mch-esd-to-digits.cxx  tags
r23/esdconvertor-saf/: CMakeLists.txt  README.md
